[package]
name = "advent-of-code-2023"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
path = "src/day01.rs"
test = true

[[bin]]
name = "day02"
path = "src/day02.rs"
test = true

[[bin]]
name = "day03"
path = "src/day03.rs"
test = true

[[bin]]
name = "day04"
path = "src/day04.rs"
test = true

[[bin]]
name = "day05"
path = "src/day05.rs"
test = true

[[bin]]
name = "day06"
path = "src/day06.rs"
test = true

[dependencies]
itertools = "0.14.0"
nom = "7.1.3"
regex = "1.10.2"
